# github-issues-automation

./: .env.example  .gitignore  Makefile  README.md  agent.py  backlog.md  config.py  docker-compose.yml  get_fields.py  get_users.py  graph.py  issues_tool.py  readme.md  send_message.py  squads.json  streamlit.py  teste2.py  update_redis.py
agents/: Dockerfile  agent.py  build_prompt.py  config.py  get_fields.py  get_users.py  graph.py  issues_tool.py  llm_factory.py  main.py  pyproject.toml  send_message.py  stateTypes.py  streamlit.py  transcribe_audio.py
agents/graphs/: checkpointer.py  issues_graph.py  planning_graph.py  router_graph.py
agents/issues_agent/: agent.py  build_prompt.py  get_fields.py  issues_tool.py
agents/planning_agent/: agent.py  build_prompt.py  github_tool.py
agents/redis_queue/: consumer.py
agents/services/: github.py  redis.py  squad.py
discord/: Dockerfile  config.py  consumer.py  discord_bot.py  main.py  message_handler.py  pyproject.toml  redis_queue.py  transcribe_audio.py  typing_utils.py
discord/commands/: command_router.py  generate_issues.py  generate_planning.py  load_options.py  ping.py
infra/: docker-compose.yml
